terraform/4_security_group_alb.tf
# Create security group for load balancer

resource "aws_security_group" "sg_alb" {
  name        = "sg_alb ${var.environment}"
  description = "Security group for load balancer"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow HTTP access from anywhere"
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "sg_alb"
  }
}
